--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-python-telegram-bot==20.3
-gspread==6.1.2
-oauth2client==4.1.3
+python-telegram-bot[job-queue]==20.7
+gspread
+oauth2client
+schedule
+
 
